changes at frontend
changes at frontend for brochure

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <script type="text/javascript">var switchTo5x=true;</script>
 <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
 <script type="text/javascript">stLight.options({publisher: "d145c5ea-9796-4078-8488-dc6407ac1d79", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
-
+<script>
+        var base_url="http://www.indiavaluehomes.com/admin";
+    </script>
     <meta name="description" content="Real Estate Portal to Search and buy affordable and budget homes across India and Apply for home loans."/>
     <meta name="description" content="Real Estate Portal to Search and buy affordable and budget homes across India and Apply for home loans."/>
     <meta name="keywords" content="Budget Homes,Affordable Homes, Budget Housing, Home Loans, 1 BHK, 2BHK, 3 BHK, Bangalore Homes,Bengaluru Homes , Delhi Homes, Chennai Homes, Mumbai Homes,Bombay Homes, Home Loan Calculators,NRI homes,EMI Calculator, Affordability Calculator,Pre launch Homes "/>
